Fix spacing issue

--- a/index.styl
+++ b/index.styl
@@ -64,6 +64,8 @@ cite
     font-size: 200%
     &:before
       content: '🡆'
+span.space
+  margin-left: 0.25em
 
 // Bootstrap helpers
 .text-center
